--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <title>Request Creation</title>
+    <title>Crea richesta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="icon" href="../../assets/img/favicon.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -127,15 +127,15 @@
 </head>
 <body>
 <main role="main" class="container">
-    <div class="header weight-800">Request creation<span class="blinker"></span></div>
+    <div class="header weight-800">Crea Richesta<span class="blinker"></span></div>
     <div class="request-form">
         <form class="form" role="form" id="create-form">
             <div class="row">
-                <label class="col-1 col-form-label">Product</label>
+                <label class="col-1 col-form-label">Prodotto</label>
                 <div class="col">
                     <div class="row">
                         <div class="form-group col no-gutters">
-                            <label class="col-12 col-form-label" for="prod_code">Product Code</label>
+                            <label class="col-12 col-form-label" for="prod_code">Codice Prodotto</label>
                             <div class="col-12">
                                 <div style="margin-left: 0;" class="input-group">
 <!--                                    <div class="input-group-prepend">-->
@@ -145,12 +145,12 @@
                                             aria-describedby="prod_codeHelpBlock" required="required"></select>
                                 </div>
                                 <span id="prod_codeHelpBlock" class="form-text text-muted"
-                                >Insert a product code in the field and select the corresponding one.</span
+                                >Inerisci i dati del prodotto e seleziona l'occorrenza corretta.</span
                                 >
                             </div>
                         </div>
                         <div class="form-group col no-gutters">
-                            <label for="prod_name" class="col-2 col-form-label">Product</label>
+                            <label for="prod_name" class="col-2 col-form-label">Prodotto</label>
                             <div class="col-12">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -168,7 +168,7 @@
                                             readonly
                                     />
                                 </div>
-                                <span id="prod_nameHelpBlock" class="form-text text-muted">Automatically generated product name.</span>
+                                <span id="prod_nameHelpBlock" class="form-text text-muted">Descrizione del prodotto.</span>
                             </div>
                         </div>
                     </div>
@@ -177,11 +177,11 @@
             </div>
 
             <div class="form-group row">
-                <label for="notes" class="col-1 col-form-label">Notes</label>
+                <label for="notes" class="col-1 col-form-label">Note</label>
                 <div class="col-11">
                     <textarea id="notes" name="notes" cols="40" rows="3" class="form-control"
                               aria-describedby="notesHelpBlock"></textarea>
-                    <span id="notesHelpBlock" class="form-text text-muted">Add notes to this request</span>
+                    <span id="notesHelpBlock" class="form-text text-muted">Aggiungi note alla richesta</span>
                 </div>
             </div>
             <div class="form-group row">
@@ -197,7 +197,7 @@
                 />
             </div>
             <div class="form-group row">
-                <label for="date_due" class="col-1 col-form-label">Due Date</label>
+                <label for="date_due" class="col-1 col-form-label">Data Scadenza</label>
                 <div class="col-11">
                     <div class="input-group">
                         <div class="input-group-prepend">
@@ -214,13 +214,13 @@
                                 required="required"
                         />
                     </div>
-                    <span id="date_dueHelpBlock" class="form-text text-muted">Date before which the counting should be completed</span>
+                    <span id="date_dueHelpBlock" class="form-text text-muted">Data di scadenza della richiesta</span>
                 </div>
             </div>
 
             <div class="form-group row col-12 justify-content-evenly">
-                <button name="submit" type="submit" class="col-5 styled-btn btn-blue">Create</button>
-                    <a name="submit" type="submit" class="col-5 styled-btn btn-red-dark text-align-center no-text-decoration" href="office_homepage.html">Back</a>
+                <button name="submit" type="submit" class="col-5 styled-btn btn-blue">Crea</button>
+                    <a name="submit" type="submit" class="col-5 styled-btn btn-red-dark text-align-center no-text-decoration" href="office_homepage.html">Indietro</a>
             </div>
         </form>
     </div>
