--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <title>Warehouse count asker</title>
+    <title>Gestione Conteggi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <link rel="icon" href="../../assets/img/favicon.png" />
@@ -66,13 +66,13 @@
           if (result.results[0].isClosed == 0) {
             switch (result.results[0].requestState) {
               case "countRequest":
-                append_img_request_state("request_state", "../../assets/img/countRequest.png", image_size, "Asked for count");
+                append_img_request_state("request_state", "../../assets/img/countRequest.png", image_size, "Richiesto Conteggio");
                 $("#notes").attr("readonly", true);
                 $("#date_due").attr("readonly", true);
                 $("#btn-close").show();
                 break;
               case "countDone":
-                append_img_request_state("request_state", "../../assets/img/countDone.png", image_size, "Count done");
+                append_img_request_state("request_state", "../../assets/img/countDone.png", image_size, "Conteggio Effettuato");
                 $("#notes").attr("readonly", false);
                 $("#date_due").attr("readonly", false);
                 $("#btn-update").show();
@@ -80,13 +80,13 @@
                 $("#btn-recount").show();
                 break;
               case "recountRequest":
-                append_img_request_state("request_state", "../../assets/img/recountRequest.png", image_size, "Asked for recount");
+                append_img_request_state("request_state", "../../assets/img/recountRequest.png", image_size, "Richiesta Riconta");
                 $("#notes").attr("readonly", true);
                 $("#date_due").attr("readonly", true);
                 $("#btn-close").show();
                 break;
               case "recountDone":
-                append_img_request_state("request_state", "../../assets/img/recountDone.png", image_size, "Recount done");
+                append_img_request_state("request_state", "../../assets/img/recountDone.png", image_size, "Riconta Effettuata");
                 $("#notes").attr("readonly", false);
                 $("#date_due").attr("readonly", false);
                 $("#btn-update").show();
@@ -96,7 +96,7 @@
               default:
             }
           } else {
-            append_img_request_state("request_state", "../../assets/img/closed.png", image_size, "Recount done");
+            append_img_request_state("request_state", "../../assets/img/closed.png", image_size, "Riconta Effettuata");
           }
         });
         table_data_requester.query({
@@ -146,15 +146,15 @@
         });
 
         const table_headers_strings = {
-          "IS CLOSED": "isClosed",
-          STATUS: "requestState",
-          PRODUCT: "productName",
-          FLAVOUR: "productFlavour",
-          NOTES: "notes",
-          "REQUEST DATE [dd/mm/yyyy]": "requestDate",
-          "DUE DATE [dd/mm/yyyy]": "dueDate",
-          "CLOSED DATE [dd/mm/yyyy]": "terminationDate",
-          "LAST COUNT": "lastCount",
+          "CHIUSA": "isClosed",
+          STATO: "requestState",
+          PRODOTTO: "productName",
+          VARIANTE: "productFlavour",
+          NOTE: "notes",
+          "DATA RICHIESTA [dd/mm/yyyy]": "requestDate",
+          "DATA SCADENZA [dd/mm/yyyy]": "dueDate",
+          "DATA CHIUSURA [dd/mm/yyyy]": "terminationDate",
+          "ULTIMO CONTEGGIO": "lastCount",
         };
 
         const table_data_requester = new Requester((result) => {
@@ -187,19 +187,19 @@
       <div id="edit-popup" class="popup-container">
         <div id="popup">
           <div class="card-section exit-button-wrapper">
-            <div class="card-header-title">Details</div>
+            <div class="card-header-title">Dettagli</div>
             <div class="exit-button">&times;</div>
           </div>
           <div id="popup-data" class="card-section form-holder">
             <!-- Request info -->
             <div class="form-group row">
               <div class="row col-12">
-                <label for="req_id" class="col-1 col-form-label">Request Id</label>
+                <label for="req_id" class="col-1 col-form-label">Id Richesta</label>
                 <div class="input-group">
                   <div class="input-group-prepend" id="request_state"></div>
                   <input id="req_id" name="req_id" type="text" class="form-control" aria-describedby="req_idHelpBlock" required="required" readonly />
                 </div>
-                <span id="req_idHelpBlock" class="form-text text-muted">Assigned id to the current request</span>
+                <span id="req_idHelpBlock" class="form-text text-muted">Identificativo della richesta</span>
               </div>
             </div>
 
@@ -207,7 +207,7 @@
             <div class="row">
               <div class="row col-12">
                 <div class="form-group col no-gutters">
-                  <label class="col-12 col-form-label" for="prod_code">Product Code</label>
+                  <label class="col-12 col-form-label" for="prod_code">Codice Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -215,12 +215,12 @@
                       </div>
                       <input id="prod_code" name="prod_code" type="text" class="form-control" aria-describedby="prod_codeHelpBlock" required="required" readonly />
                     </div>
-                    <span id="prod_codeHelpBlock" class="form-text text-muted">Code assigned to the product</span>
+                    <span id="prod_codeHelpBlock" class="form-text text-muted">Codice assegnato al prodotto</span>
                   </div>
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label class="col-12 col-form-label" for="prod_name">Product Name</label>
+                  <label class="col-12 col-form-label" for="prod_name">Descrizione Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -228,12 +228,12 @@
                       </div>
                       <input id="prod_name" name="prod_name" type="text" class="form-control" aria-describedby="prod_nameHelpBlock" required="required" readonly />
                     </div>
-                    <span id="prod_nameHelpBlock" class="form-text text-muted">Descriptive product name</span>
+                    <span id="prod_nameHelpBlock" class="form-text text-muted">Descrizione del prodotto selezionato</span>
                   </div>
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label for="prod_variant" class="col-12 col-form-label">Product flavour</label>
+                  <label for="prod_variant" class="col-12 col-form-label">Variante Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -243,7 +243,7 @@
                       </div>
                       <input id="prod_variant" name="prod_variant" type="text" class="form-control" aria-describedby="prod_variantHelpBlock" required="required" readonly />
                     </div>
-                    <span id="prod_variantHelpBlock" class="form-text text-muted">The specific variant of this product</span>
+                    <span id="prod_variantHelpBlock" class="form-text text-muted">Variante specifica del prodotto selezionato</span>
                   </div>
                 </div>
               </div>
@@ -252,7 +252,7 @@
             <!-- Notes -->
             <div class="form-group row">
               <div class="row col-12">
-                <label for="notes" class="col-1 col-form-label">Notes</label>
+                <label for="notes" class="col-1 col-form-label">Note</label>
                 <div class="input-group">
                   <textarea id="notes" name="notes" cols="20" rows="2" class="form-control" aria-describedby="notesHelpBlock" readonly></textarea>
                 </div>
@@ -263,7 +263,7 @@
             <div class="row">
               <div class="row col-12">
                 <div class="form-group col no-gutters">
-                  <label for="date_due" class="col-12 col-form-label">Due Date [mm/dd/yyyy]</label>
+                  <label for="date_due" class="col-12 col-form-label">Data Scadenza [mm/dd/yyyy]</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -277,7 +277,7 @@
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label for="date_creation" class="col-12 col-form-label">Creation Date [mm/dd/yyyy]</label>
+                  <label for="date_creation" class="col-12 col-form-label">Data Creazione [mm/dd/yyyy]</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -296,7 +296,7 @@
             <div class="row">
               <div class="row col-12">
                 <div class="form-group col no-gutters">
-                  <label for="count_previous" class="col-12 col-form-label">Previous Count</label>
+                  <label for="count_previous" class="col-12 col-form-label">Conta Precedente</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -310,7 +310,7 @@
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label for="count_last" class="col-12 col-form-label">Last Count</label>
+                  <label for="count_last" class="col-12 col-form-label">Ultima Conta</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -327,7 +327,7 @@
 
             <div class="row col-12 justify-content-center" style="padding-top: 10px">
               <div class="col-10 form-group row col-10 margin-10">
-                <button name="update" type="submit" class="styled-btn btn-blue" id="btn-update">Update</button>
+                <button name="update" type="submit" class="styled-btn btn-blue" id="btn-update">Modifica</button>
               </div>
               <div class="row col-12 popup-buttons-wrapper justify-content-evenly margin-10">
                 <button name="close" type="submit" class="col-5 styled-btn btn-red" id="btn-close">
@@ -346,7 +346,7 @@
       <!--  -->
       <!-- Header -->
       <!--  -->
-      <div class="header weight-800" id="header">Office</div>
+      <div class="header weight-800" id="header">Ufficio</div>
 
       <!--  -->
       <!-- Sub Header -->
@@ -355,9 +355,9 @@
       <div class="sub-header">
         <div class="styled-btn btn-blue text-align-center">
           <input type="checkbox" id="btn-show-closed" />
-          <label for="btn-show-closed">Show closed</label>
+          <label for="btn-show-closed">Mostra Chiuse</label>
         </div>
-        <a type="button" id="btn-add-request" class="styled-btn btn-blue text-align-center no-text-decoration" href="office_create.html">Add Request</a>
+        <a type="button" id="btn-add-request" class="styled-btn btn-blue text-align-center no-text-decoration" href="office_create.html">Aggiungi Richesta</a>
       </div>
 
       <div class="request-table" id="request-table-container"></div>
