--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <title>Warehouse count asker</title>
+    <title>Gestione Conteggi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="icon" href="../../assets/img/favicon.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -108,11 +108,11 @@
           $("#req_id").val(element.attr("id"));
           switch (result.results[0].requestState) {
             case "countRequest":
-              append_img_request_state("request_state", "../../assets/img/countRequest.png", image_size, "Asked for count");
+              append_img_request_state("request_state", "../../assets/img/countRequest.png", image_size, "Richiesto Conteggio");
               $("#btn-count").show();
               break;
             case "recountRequest":
-              append_img_request_state("request_state", "../../assets/img/recountRequest.png", image_size, "Asked for recount");
+              append_img_request_state("request_state", "../../assets/img/recountRequest.png", image_size, "Richiesta Riconta");
               $("#btn-count").show();
               break;
             default:
@@ -150,10 +150,10 @@
 
         $("#btn-count").click((e) => {
           if ($.isNumeric($("#counted_items").val()) && $("#counted_items").val() > 0) {
-            if ($("#img_request_state").children("img").attr("title") == "Asked for count") {
+            if ($("#img_request_state").children("img").attr("title") == "Richiesto Conteggio") {
               warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "countRequest");
               location.reload();
-            } else if ($("#img_request_state").children("img").attr("title") == "Asked for recount") {
+            } else if ($("#img_request_state").children("img").attr("title") == "Richiesta Riconta") {
               warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "recountRequest");
               location.reload();
             }
@@ -163,14 +163,14 @@
         });
 
         const table_headers_strings = {
-          STATUS: "requestState",
-          PRODUCT: "productName",
-          FLAVOUR: "productFlavour",
-          NOTES: "notes",
-          "REQUEST DATE [dd/mm/yyyy]": "requestDate",
-          "DUE DATE [dd/mm/yyyy]": "dueDate",
-          "EXPECTED IN TOTAL": "expectedCount",
-          "READY TO BE SHIPPED": "expectedGroundCount",
+          STATO: "requestState",
+          PRODOTTO: "productName",
+          VARIANTE: "productFlavour",
+          NOTE: "notes",
+          "DATA RICHIESTA [dd/mm/yyyy]": "requestDate",
+          "DATA SCADENZA [dd/mm/yyyy]": "dueDate",
+          "PREVISTI TOTALI": "expectedCount",
+          "A TERRA": "expectedGroundCount",
         };
         const table_data_requester = new Requester((result) => {
           table_maker(result.results, "request-table-container", table_headers_strings);
@@ -189,29 +189,29 @@
       <div id="edit-popup" class="popup-container">
         <div id="popup">
           <div class="card-section exit-button-wrapper">
-            <div class="card-header-title">Details</div>
+            <div class="card-header-title">Dettagli</div>
             <div class="exit-button">&times;</div>
           </div>
           <div id="popup-data" class="card-section form-holder">
             <!-- Request info -->
             <div class="form-group row">
-              <label for="req_id" class="col-1 col-form-label">Request Id</label>
+              <label for="req_id" class="col-1 col-form-label">Id Richesta</label>
               <div class="row col-11">
                 <div class="input-group">
                   <div class="input-group-prepend" id="request_state"></div>
                   <input id="req_id" name="req_id" type="text" class="form-control" aria-describedby="req_idHelpBlock" required="required" readonly />
                 </div>
-                <span id="req_idHelpBlock" class="form-text text-muted">Assigned id to the current request</span>
+                <span id="req_idHelpBlock" class="form-text text-muted">Id assegnato alla richesta.</span>
               </div>
             </div>
 
             <!-- Product info -->
             <div class="row">
-              <label class="col-1 col-form-label">Product Info</label>
+              <label class="col-1 col-form-label">Informazioni Prodotto</label>
 
               <div class="row col-11">
                 <div class="form-group col no-gutters">
-                  <label class="col-12 col-form-label" for="prod_code">Product Code</label>
+                  <label class="col-12 col-form-label" for="prod_code">Codice Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -219,12 +219,12 @@
                       </div>
                       <input id="prod_code" name="prod_code" type="text" class="form-control" aria-describedby="prod_codeHelpBlock" required="required" readonly />
                     </div>
-                    <span id="prod_codeHelpBlock" class="form-text text-muted">Code assigned to the product</span>
+                    <span id="prod_codeHelpBlock" class="form-text text-muted">Codice assegnato al prodotto</span>
                   </div>
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label class="col-12 col-form-label" for="prod_name">Product Name</label>
+                  <label class="col-12 col-form-label" for="prod_name">Descrizione Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -232,12 +232,12 @@
                       </div>
                       <input id="prod_name" name="prod_name" type="text" class="form-control" aria-describedby="prod_nameHelpBlock" required="required" readonly />
                     </div>
-                    <span id="prod_nameHelpBlock" class="form-text text-muted">Descriptive product name</span>
+                    <span id="prod_nameHelpBlock" class="form-text text-muted">Descrizione del prodotto selezionato</span>
                   </div>
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label for="prod_variant" class="col-12 col-form-label">Product flavour</label>
+                  <label for="prod_variant" class="col-12 col-form-label">Variante Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -247,7 +247,7 @@
                       </div>
                       <input id="prod_variant" name="prod_variant" type="text" class="form-control" aria-describedby="prod_variantHelpBlock" required="required" readonly />
                     </div>
-                    <span id="prod_variantHelpBlock" class="form-text text-muted">The specific variant of this product</span>
+                    <span id="prod_variantHelpBlock" class="form-text text-muted">Variante specifica dell'articolo selezionato</span>
                   </div>
                 </div>
               </div>
@@ -255,7 +255,7 @@
 
             <!-- Notes -->
             <div class="form-group row" style="margin-top: 13px !important">
-              <label for="notes" class="col-1 col-form-label">Notes</label>
+              <label for="notes" class="col-1 col-form-label">Note</label>
               <div class="row col-11">
                 <div class="input-group">
                   <textarea id="notes" name="notes" cols="20" rows="2" class="form-control" aria-describedby="notesHelpBlock" readonly></textarea>
@@ -265,10 +265,10 @@
 
             <!-- Dates -->
             <div class="row">
-              <label class="col-1 col-form-label">Dates</label>
+              <label class="col-1 col-form-label">Date</label>
               <div class="row col-11">
                 <div class="form-group col no-gutters">
-                  <label for="date_due" class="col-12 col-form-label">Due Date [mm/dd/yyyy]</label>
+                  <label for="date_due" class="col-12 col-form-label">Data Scadenza [mm/dd/yyyy]</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -282,7 +282,7 @@
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label for="date_creation" class="col-12 col-form-label">Creation Date [mm/dd/yyyy]</label>
+                  <label for="date_creation" class="col-12 col-form-label">Data Creazione [mm/dd/yyyy]</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -299,10 +299,10 @@
 
             <!-- Expected Counts -->
             <div class="row">
-              <label class="col-1 col-form-label">Counts</label>
+              <label class="col-1 col-form-label">Conteggi</label>
               <div class="row col-11">
                 <div class="form-group col no-gutters">
-                  <label for="expected_count" class="col-12 col-form-label">Expected</label>
+                  <label for="expected_count" class="col-12 col-form-label">Previsti Totali</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -316,7 +316,7 @@
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label for="expected_ground_count" class="col-12 col-form-label">Ready to be shipped</label>
+                  <label for="expected_ground_count" class="col-12 col-form-label">A Terra</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -330,7 +330,7 @@
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label class="col-12 col-form-label">Counted</label>
+                  <label class="col-12 col-form-label">Contati</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -347,12 +347,12 @@
 
             <div class="row col-12 justify-content-center" style="padding-top: 10px">
               <span style="text-align: center; font-weight: 800; font-size: 1.5rem"
-                >Location standard: <span id="productLocation" style="font-weight: 600; font-size: 1.8rem"></span
+                >Ubicazione Standard: <span id="productLocation" style="font-weight: 600; font-size: 1.8rem"></span
               ></span>
             </div>
             <div class="row col-12 justify-content-center" style="padding-top: 10px">
               <div class="col-10 form-group row col-12 margin-10">
-                <button name="update" class="styled-btn btn-blue" id="btn-count">Items Counted</button>
+                <button name="update" class="styled-btn btn-blue" id="btn-count">Articoli Contati</button>
               </div>
             </div>
           </div>
@@ -362,7 +362,7 @@
       <!--  -->
       <!-- Header -->
       <!--  -->
-      <div class="header weight-800">Warehouse director</div>
+      <div class="header weight-800">Gestione Conteggi Magazzino</div>
 
       <div class="request-table" id="request-table-container"></div>
     </main>
