--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <title>Warehouse count asker</title>
+    <title>Gestione Conteggi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="icon" href="../../assets/img/favicon.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -37,9 +37,9 @@
           const day = ("0" + now.getDate()).slice(-2);
           const month = ("0" + (now.getMonth() + 1)).slice(-2);
           const today = now.getFullYear() + "-" + month + "-" + day;
-          var image_size = "40px";
+          const image_size = "40px";
           //Format dates
-          var creationDate = result.results[0].requestDate.replace(" 00:00:00", "");
+          let creationDate = result.results[0].requestDate.replace(" 00:00:00", "");
           creationDate = creationDate.split("-")[1] + "-" + creationDate.split("-")[2] + "-" + creationDate.split("-")[0];
           //Product Info
           $("#prod_code").val(result.results[0].productCode);
@@ -91,11 +91,11 @@
           $("#req_id").val(element.attr("id"));
           switch (result.results[0].requestState) {
             case "countRequest":
-              append_img_request_state("request_state", "../../assets/img/countRequest.png", image_size, "Asked for count");
+              append_img_request_state("request_state", "../../assets/img/countRequest.png", image_size, "Richiesto Conteggio");
               $("#btn-count").show();
               break;
             case "recountRequest":
-              append_img_request_state("request_state", "../../assets/img/recountRequest.png", image_size, "Asked for recount");
+              append_img_request_state("request_state", "../../assets/img/recountRequest.png", image_size, "Richiesta Riconta");
               $("#btn-count").show();
               break;
             default:
@@ -133,26 +133,26 @@
 
         $("#btn-count").click((e) => {
           if ($.isNumeric($("#counted_items").val()) && $("#counted_items").val() > 0) {
-            if ($("#img_request_state").children("img").attr("title") == "Asked for count") {
+            if ($("#img_request_state").children("img").attr("title") == "Richiesto Conteggio") {
               warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "countRequest");
               location.reload();
-            } else if ($("#img_request_state").children("img").attr("title") == "Asked for recount") {
+            } else if ($("#img_request_state").children("img").attr("title") == "Richiesta Riconta") {
               warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "recountRequest");
               location.reload();
             }
           } else {
-            alert("No empty fields or negatives numbers are accepted");
+            alert("I campi vuoti e i numeri negativi non sono accettati");
           }
         });
 
         const table_headers_strings = {
-          STATUS: "requestState",
-          PRODUCT: "productName",
-          FLAVOUR: "productFlavour",
-          NOTES: "notes",
-          "REQUEST DATE": "requestDate",
-          "DUE DATE": "dueDate",
-          "READY TO BE SHIPPED": "expectedGroundCount",
+          STATO: "requestState",
+          PRODOTTO: "productName",
+          VARIANTE: "productFlavour",
+          NOTE: "notes",
+          "DATA RICHIESTA": "requestDate",
+          "DATA SCADENZA": "dueDate",
+          "A TERRA": "expectedGroundCount",
         };
         const table_data_requester = new Requester((result) => {
           table_maker(result.results, "request-table-container", table_headers_strings);
@@ -171,13 +171,13 @@
       <div id="edit-popup" class="popup-container">
         <div id="popup">
           <div class="card-section exit-button-wrapper">
-            <div class="card-header-title">Details</div>
+            <div class="card-header-title">Dettagli</div>
             <div class="exit-button">&times;</div>
           </div>
           <div id="popup-data" class="card-section form-holder">
             <!-- Request info -->
             <div class="form-group row">
-              <label class="col-1 col-form-label">Request Id</label>
+              <label class="col-1 col-form-label">Id Richesta</label>
 <!--              <label for="req_id" class="col-1 col-form-label">Request Id</label>-->
               <div class="row col-11">
                 <div class="input-group">
@@ -190,11 +190,11 @@
 
             <!-- Product info -->
             <div class="row">
-              <label class="col-1 col-form-label">Product Info</label>
+              <label class="col-1 col-form-label">Informazioni Prodotto</label>
 
               <div class="row col-11">
                 <div class="form-group col no-gutters">
-                  <label class="col-12 col-form-label" for="prod_code">Product Code</label>
+                  <label class="col-12 col-form-label" for="prod_code">Codice Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -202,12 +202,12 @@
                       </div>
                       <input id="prod_code" name="prod_code" type="text" class="form-control" aria-describedby="prod_codeHelpBlock" required="required" readonly />
                     </div>
-                    <span id="prod_codeHelpBlock" class="form-text text-muted">Code assigned to the product</span>
+                    <span id="prod_codeHelpBlock" class="form-text text-muted">Codice assegnato al prodotto</span>
                   </div>
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label class="col-12 col-form-label" for="prod_name">Product Name</label>
+                  <label class="col-12 col-form-label" for="prod_name">Descrizione Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -215,12 +215,12 @@
                       </div>
                       <input id="prod_name" name="prod_name" type="text" class="form-control" aria-describedby="prod_nameHelpBlock" required="required" readonly />
                     </div>
-                    <span id="prod_nameHelpBlock" class="form-text text-muted">Descriptive product name</span>
+                    <span id="prod_nameHelpBlock" class="form-text text-muted">Descrizione del prodotto selezionato</span>
                   </div>
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label for="prod_variant" class="col-12 col-form-label">Product flavour</label>
+                  <label for="prod_variant" class="col-12 col-form-label">Variante Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -230,7 +230,7 @@
                       </div>
                       <input id="prod_variant" name="prod_variant" type="text" class="form-control" aria-describedby="prod_variantHelpBlock" required="required" readonly />
                     </div>
-                    <span id="prod_variantHelpBlock" class="form-text text-muted">The specific variant of this product</span>
+                    <span id="prod_variantHelpBlock" class="form-text text-muted">Variante specifica del prodotto selezionato</span>
                   </div>
                 </div>
               </div>
@@ -238,7 +238,7 @@
 
             <!-- Notes -->
             <div class="form-group row" style="margin-top: 13px !important">
-              <label for="notes" class="col-1 col-form-label">Notes</label>
+              <label for="notes" class="col-1 col-form-label">Note</label>
               <div class="row col-11">
                 <div class="input-group">
                   <textarea id="notes" name="notes" cols="20" rows="2" class="form-control" aria-describedby="notesHelpBlock" readonly></textarea>
@@ -248,10 +248,10 @@
 
             <!-- Dates -->
             <div class="row">
-              <label class="col-1 col-form-label">Dates</label>
+              <label class="col-1 col-form-label">Date</label>
               <div class="row col-11">
                 <div class="form-group col no-gutters">
-                  <label for="date_due" class="col-12 col-form-label">Due Date [mm/dd/yyyy]</label>
+                  <label for="date_due" class="col-12 col-form-label">Data Scadenza [mm/dd/yyyy]</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -265,7 +265,7 @@
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label for="date_creation" class="col-12 col-form-label">Creation Date [mm/dd/yyyy]</label>
+                  <label for="date_creation" class="col-12 col-form-label">Data Creazione [mm/dd/yyyy]</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -282,10 +282,10 @@
 
             <!-- Expected Counts -->
             <div class="row">
-              <label class="col-1 col-form-label">Counts</label>
+              <label class="col-1 col-form-label">Conte</label>
               <div class="row col-11">
                 <div class="form-group col no-gutters">
-                  <label for="expected_ground_count" class="col-12 col-form-label">Ready to be shipped</label>
+                  <label for="expected_ground_count" class="col-12 col-form-label">A Terra</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -298,7 +298,7 @@
                   </div>
                 </div>
                 <div class="form-group col no-gutters">
-                  <label class="col-11 col-form-label">Counted Items</label>
+                  <label class="col-11 col-form-label">Articoli Contati</label>
                   <div class="row col-11">
                     <div class="form-group col no-gutters">
                       <div class="col-12">
@@ -325,7 +325,7 @@
 
             <div class="row col-12 justify-content-center" style="padding-top: 10px">
               <div class="col-10 form-group row col-12 margin-10">
-                <button name="update" class="styled-btn btn-blue" id="btn-count">Items Counted</button>
+                <button name="update" class="styled-btn btn-blue" id="btn-count">Articoli Contati</button>
               </div>
             </div>
           </div>
@@ -335,7 +335,7 @@
       <!--  -->
       <!-- Header -->
       <!--  -->
-      <div class="header weight-800">Warehouse operator</div>
+      <div class="header weight-800">Gestione Conteggi Operatore</div>
 
       <div class="request-table" id="request-table-container"></div>
     </main>
